--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -20,4 +23,3 @@ jobs:
           publish_dir: ./public
           keep_files: true
           commit_message: "Deploy to GitHub Pages"
-
