--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,22 @@
 name = "mbtitest"
 main = "functions/api/tests.js"
-compatibility_date = "2024-12-01"
+compatibility_date = "2024-12-06"
 
-r2_buckets = [{ binding = "MBTI_BUCKET", bucket_name = "mbtitest" }]
+[site]
+bucket = "./public"           # Pages static assets
+
+[[r2_buckets]]
+binding = "MBTI_BUCKET"       # used inside Functions (env.MBTI_BUCKET)
+bucket_name = "mbtitest"
+
+[vars]
+ASSETS_BASE = "https://<accountid>.r2.cloudflarestorage.com/mbtitest"
+# Optional: FRONTEND_API_BASE = "https://<pages-domain>/api"
+# Optional: LOG_LEVEL = "info"
+
+[env.production.vars]
+ASSETS_BASE = "https://01d6807196c93a4774c1bb50ee8f4ebb.r2.cloudflarestorage.com/mbtitest"
+# Put any prod-only overrides here
+
+# For local CLI uploads (not used by Pages runtime; only wrangler r2):
+# [r2_buckets] above is enough for runtime. Do NOT place access/secret keys here.
