Add package.json and update .gitignore, README, and configuration files for deployment
- Introduced package.json to manage project dependencies and scripts for deployment using Wrangler.
- Updated .gitignore to exclude additional build and development files.
- Enhanced README with npm script instructions for local development and deployment.
- Modified wrangler.toml to set the correct asset base URL for R2 storage.
- Adjusted API data fetching logic in dataService.js to improve caching behavior.
- Changed DATA_URL in constants.js to point to the new API endpoint for dynamic data retrieval.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 .github/*
 .cursor/*
 .env*
+.dev.vars
+.wrangler/
+node_modules/
+dist/
+build/
+public/assets/data/
+!public/assets/data/index.json
