Update asset base URLs in wrangler.toml for consistency across environments
- Changed ASSETS_BASE URL for both local and production environments to a unified public R2 endpoint.
- Added comments for clarity on the purpose of the asset base URL in relation to Functions and local CLI uploads.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,12 +10,14 @@ binding = "MBTI_BUCKET"       # used inside Functions (env.MBTI_BUCKET)
 bucket_name = "mbtitest"
 
 [vars]
-ASSETS_BASE = "https://01d6807196c93a4774c1bb50ee8f4ebb.r2.cloudflarestorage.com/mbtitest"
+# R2 public asset base (unauthenticated). Keep bucket name; Functions will append assets/data.
+ASSETS_BASE = "https://pub-6eede8799513497397b2ee73cfbc9020.r2.dev"
 # Optional: FRONTEND_API_BASE = "https://<pages-domain>/api"
 # Optional: LOG_LEVEL = "info"
 
 [env.production.vars]
-ASSETS_BASE = "https://01d6807196c93a4774c1bb50ee8f4ebb.r2.cloudflarestorage.com/mbtitest"
+# Production uses the same public R2 endpoint.
+ASSETS_BASE = "https://pub-6eede8799513497397b2ee73cfbc9020.r2.dev"
 # Put any prod-only overrides here
 
 # For local CLI uploads (not used by Pages runtime; only wrangler r2):
