--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 .DS_Store
 
 .dev.vars
-.github/*
-.cursor/*
+.github/
+.cursor/
 .env*
 .dev.vars
 .wrangler/
 node_modules/
 dist/
 build/
-public/assets/data/
-!public/assets/data/index.json
 assets/
