--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,3 +3,11 @@ compatibility_date = "2024-12-08"
 
 [site]
 bucket = "./public"
+
+
+[[r2_buckets]]
+binding = "MBTI_BUCKET" # 또는 ASSETS
+bucket_name = "mbti-assets"
+
+[vars]
+ASSETS_BASE = "https://pub-9394623df95a4f669f145a4ede63d588.r2.dev" #https://pub-9394623df95a4f669f145a4ede63d588.r2.dev
