Add MBTI test image upload and management features
- Introduced new API endpoints for uploading images associated with MBTI test results, enhancing the test management capabilities.
- Added functionality to retrieve and display uploaded images in the admin interface, improving user experience for managing test assets.
- Updated the admin HTML and JavaScript files to support image uploads, including form elements for image file selection and MBTI code input.
- Enhanced the CSS styles for the image upload section and image browser, ensuring a cohesive design and improved usability in the admin interface.
- Implemented validation for image uploads and error handling to provide feedback during the upload process.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "wrangler dev"
   },
   "dependencies": {
     "acorn": "^8.14.0",
