--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,6 @@
 name = "mbtitest"
 compatibility_date = "2024-12-08"
-
-[site]
-bucket = "./public"
-
+pages_build_output_dir = "./public"
 
 [[r2_buckets]]
 binding = "MBTI_BUCKET" # 또는 ASSETS
