Add database configuration to wrangler.toml for mbti-db
- Introduced a new database configuration under [[d1_databases]] for mbti-db, including binding, database name, and database ID.
- This addition supports the integration of the mbti database into the project.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,6 +6,11 @@ pages_build_output_dir = "./public"
 binding = "MBTI_BUCKET" # 또는 ASSETS
 bucket_name = "mbti-assets"
 
+[[d1_databases]]
+binding = "mbti_db"
+database_name = "mbti-db"
+database_id = "b3d4e76a-4e45-4070-9e89-701c35cb642f"
+
 [vars]
 ASSETS_BASE = "https://pub-9394623df95a4f669f145a4ede63d588.r2.dev"
 R2_PUBLIC_BASE_URL = "https://pub-9394623df95a4f669f145a4ede63d588.r2.dev"
